# promocato

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
script/: start.sh
