[tool.poetry]
name = "promocato"
version = "0.1.0"
description = ""
authors = ["Nobin Khandaker <khandakernobin@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pyside6 = "^6.8.0.2"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
promocato = "app.main:main"
